# camera-services

./: README.md  pyproject.toml  requirements.txt
services/aof_botelegram/: aof_botelegram.py
services/aof_worker/: aof-worker.py  zbx_export_host.yaml
services/envia_notificacao/: database_viewer.py  envia_notificacao.py  filters_functions.py  platform_functions.py  sql_functions.py  tfai_notif_deploy.py  tfai_notif_dev.py
services/file_server/client/: client_file_server.js
services/file_server/server/: .env  Dockerfile  docker-compose.yml  file_server.js  package.json
services/systemd/: aof-supervisor.service  aof_botelegram.service  aof_worker.service  envia_notificacao.service
src/: AoFBase.py  CamBaseFixa.py  CamBasePTZ.py  CamFixa.py  CamPTZBosch.py  CamPTZHikvisionPassive.py  CamPTZMoveDetect.py  RTSPFrameGrabber.py  Supervisor.py  Utilidades.py  config.json  config.jsonBAK  scalene-profile.json
src/FFMPEGv/: AoFBaseFFMPEG.py  AoFBaseFFMPEG.pyBAK  CamBaseFixaFFMPEG.py  CamBasePTZFFMPEG.py  CamFixaFFMPEG.py  CamPTZBoschFFMPEG.py  RTSPFrameGrabber.py  __init__.py
src/cameras/: AoFBase.py  CamBaseFixa.py  CamBasePTZ.py  CamFixa.py  CamPTZBosch.py  RTSPFrameGrabber.py
src/utils/: cameras.py  logger.py
src/web/: cadastra_coord_ptz.py  calibracao_ptz.py  calibracao_ptz_gaia.py  frame_rtsp_go_pipe.py
utils/: MoveDetectionCam.py  TestePassivoHikvision.py
utils/cadastra_coord_ptz/: cadastra_coord_ptz.py
utils/calibracao_ptz/: calibracao_ptz.py  calibracao_ptz_gaia.py
utils/rtsp_go_pipe/: frame_rtsp_go_pipe.py  go.mod  go.sum  rtsp_go_pipe.go  rtsp_go_pipe2.go
