[project]
name = "camera-services"
version = "0.1.0"
requires-python = ">=3.11.2"
dependencies = [
    "aioice==0.10.1",
    "aiortc==1.13.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "apscheduler==3.11.0",
    "attrs==25.3.0",
    "av==14.2.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.1.2",
    "cryptography==45.0.6",
    "dnspython==2.7.0",
    "flask==3.1.1",
    "google-crc32c==1.7.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "ifaddr==0.2.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg==0.6.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml==5.4.0",
    "m3u8==6.0.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "mysql==0.0.3",
    "mysql-connector-python==9.3.0",
    "mysqlclient==2.2.7",
    "numpy>=2.4.6",
    "nvidia-ml-py==13.590.48",
    "onvif-zeep==0.2.12",
    "opencv-python>=4.13.0.92",
    "packaging==25.0",
    "pika==1.3.2",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "psutil==7.0.0",
    "py-spy==0.4.0",
    "py-zabbix==1.1.7",
    "pycparser==2.22",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pylibsrtp==0.12.0",
    "pyopenssl==25.1.0",
    "python-telegram-bot==22.2",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.4",
    "requests-file==2.1.0",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "scalene>=2.3.0",
    "sdnotify==0.3.2",
    "sensecam-control==0.1.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sp==1.1.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzlocal==5.3.1",
    "urllib3==2.4.0",
    "watchdog==6.0.0",
    "werkzeug==3.1.3",
    "zeep==4.3.1",
]
